@@ -52,6 +52,7 @@ InstrumentsDb.Copy.desc = Copying
 InstrumentsDb.CreateDirectory.desc = Creating new folder
 InstrumentsDb.FindDirectories.desc = Searching
 InstrumentsDb.FindInstruments.desc = Searching
+InstrumentsDb.Format.desc = Formatting the instruments database
 InstrumentsDb.GetDrectories.desc = Updating database directories
 InstrumentsDb.GetDrectory.desc = Updating database directory
 InstrumentsDb.GetDirectoryCount.desc = Calculating directory number
