@@ -10,9 +10,6 @@ ChannelProperties.btnFxSends = Effect sends
 CloseTabDlg.rbMove = Move them to
 CloseTabDlg.rbRemove = Remove them
 
-DetailedErrorDlg.hideDetails = Hide Details <<
-DetailedErrorDlg.showDetails = Show Details >>
-
 HelpAboutDlg.btnLicense = GNU General Public License
 
 ManageOrchestrasPage.lnkOrchestras = Show Orchestras
