@@ -1,2 +1,4 @@
 A4n.notConnected = Not connected! Please reconnect first
 HelpAboutDlg.DesktopApiNotSupported = Desktop API not supported
+
+error = Error
