@@ -1,5 +1,6 @@
 A4n.noInstrumentsDbSupport! = LinuxSampler was not build with instruments database support
 
+InstrumentsDbFrame.formatDatabase? = All instruments and directories will be permanently removed! Are you sure?
 InstrumentsDbFrame.unknownDirectory! = Could not find directory: {0}
 
 ProgressDlg.cancel? = There is one pending task. Do you really want to cancel
