@@ -5,6 +5,9 @@ JSGeneralProps.btnClearRecentScriptList = Clear List
 
 JSDbSearchPane.btnFind = Find
 
+JSDetailedErrorDlg.hideDetails = Hide Details <<
+JSDetailedErrorDlg.showDetails = Show Details >>
+
 JSLSConsolePropsPane.btnClearCmdHistory = Clear History
 JSLSConsolePropsPane.btnDefaults = Reset to defaults
 
